{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 277,
  "lineage": "e9bde55c-488c-de50-042b-b1aad97dbb95",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_network_interface",
      "name": "eniFgtPort3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/networkInterfaces/eni-port3-fgt1",
            "ip_configuration": [
              {
                "name": "ip-port3-fgt1",
                "primary": true,
                "private_ip_address": "192.168.13.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/virtualNetworks/VNET-NGFW/subnets/subnet-fgt-port3"
              }
            ],
            "location": "chinanorth2",
            "name": "eni-port3-fgt1",
            "private_ip_address": "192.168.13.4",
            "private_ip_addresses": [
              "192.168.13.4"
            ],
            "resource_group_name": "lg-test",
            "tags": {
              "Project": "fgtvm-ha",
              "Terraform": "true"
            }
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/networkInterfaces/eni-port3-fgt2",
            "ip_configuration": [
              {
                "name": "ip-port3-fgt2",
                "primary": true,
                "private_ip_address": "192.168.13.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/virtualNetworks/VNET-NGFW/subnets/subnet-fgt-port3"
              }
            ],
            "location": "chinanorth2",
            "name": "eni-port3-fgt2",
            "private_ip_address": "192.168.13.5",
            "private_ip_addresses": [
              "192.168.13.5"
            ],
            "resource_group_name": "lg-test",
            "tags": {
              "Project": "fgtvm-ha",
              "Terraform": "true"
            }
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_network_interface",
      "name": "eniFgtPort4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/networkInterfaces/eni-port4-fgt1",
            "ip_configuration": [
              {
                "name": "ip-port4-fgt1",
                "primary": true,
                "private_ip_address": "192.168.14.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/publicIPAddresses/eip-mgmt-fgt1",
                "subnet_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/virtualNetworks/VNET-NGFW/subnets/subnet-fgt-port4"
              }
            ],
            "location": "chinanorth2",
            "name": "eni-port4-fgt1",
            "private_ip_address": "192.168.14.5",
            "private_ip_addresses": [
              "192.168.14.5"
            ],
            "resource_group_name": "lg-test",
            "tags": {
              "Project": "fgtvm-ha",
              "Terraform": "true"
            }
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/networkInterfaces/eni-port4-fgt2",
            "ip_configuration": [
              {
                "name": "ip-port4-fgt2",
                "primary": true,
                "private_ip_address": "192.168.14.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/publicIPAddresses/eip-mgmt-fgt2",
                "subnet_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/virtualNetworks/VNET-NGFW/subnets/subnet-fgt-port4"
              }
            ],
            "location": "chinanorth2",
            "name": "eni-port4-fgt2",
            "private_ip_address": "192.168.14.4",
            "private_ip_addresses": [
              "192.168.14.4"
            ],
            "resource_group_name": "lg-test",
            "tags": {
              "Project": "fgtvm-ha",
              "Terraform": "true"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ELB/frontendIPConfigurations/eip-elb",
                "name": "eip-elb",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/publicIPAddresses/eip-elb"
              }
            ],
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ELB",
            "location": "chinanorth2",
            "name": "ELB",
            "resource_group_name": "lg-test",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Project": "fgtvm-ha",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "azurerm_public_ip.eipElb",
            "azurerm_resource_group.resrcGrp",
            "data.azurerm_virtual_network.vnetNgfw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "ilb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ILB/frontendIPConfigurations/ip-ilb",
                "name": "ip-ilb",
                "private_ip_address": "192.168.12.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/virtualNetworks/VNET-NGFW/subnets/subnet-fgt-port2"
              }
            ],
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ILB",
            "location": "chinanorth2",
            "name": "ILB",
            "private_ip_address": "192.168.12.4",
            "private_ip_addresses": [
              "192.168.12.4"
            ],
            "resource_group_name": "lg-test",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Project": "fgtvm-ha",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resrcGrp",
            "azurerm_subnet.subnetFgtPort2",
            "azurerm_virtual_network.vnetNgfw",
            "data.azurerm_virtual_network.vnetNgfw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "elbBackendAddrPool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ELB/backendAddressPools/FGT-HA-Cluster",
            "loadbalancer_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ELB",
            "name": "FGT-HA-Cluster"
          },
          "dependencies": [
            "azurerm_lb.elb",
            "azurerm_public_ip.eipElb",
            "azurerm_resource_group.resrcGrp",
            "data.azurerm_virtual_network.vnetNgfw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "ilbBackendAddrPool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ILB/backendAddressPools/FGT-HA-Cluster",
            "loadbalancer_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ILB",
            "name": "FGT-HA-Cluster"
          },
          "dependencies": [
            "azurerm_lb.ilb",
            "azurerm_resource_group.resrcGrp",
            "azurerm_subnet.subnetFgtPort2",
            "azurerm_virtual_network.vnetNgfw",
            "data.azurerm_virtual_network.vnetNgfw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_outbound_rule",
      "name": "elbSnatInternet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocated_outbound_ports": 1024,
            "backend_address_pool_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ELB/backendAddressPools/FGT-HA-Cluster",
            "enable_tcp_reset": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ELB/frontendIPConfigurations/eip-elb",
                "name": "eip-elb"
              }
            ],
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ELB/outboundRules/ToInternet",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ELB",
            "name": "ToInternet",
            "protocol": "All"
          },
          "dependencies": [
            "azurerm_lb.elb",
            "azurerm_lb_backend_address_pool.elbBackendAddrPool",
            "azurerm_public_ip.eipElb",
            "azurerm_resource_group.resrcGrp",
            "data.azurerm_virtual_network.vnetNgfw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "elbprobe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ELB/probes/elbprobe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ELB",
            "name": "elbprobe",
            "number_of_probes": 2,
            "port": 8008,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.elb",
            "azurerm_public_ip.eipElb",
            "azurerm_resource_group.resrcGrp",
            "data.azurerm_virtual_network.vnetNgfw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "ilbprobe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ILB/probes/ilbprobe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ILB",
            "name": "ilbprobe",
            "number_of_probes": 2,
            "port": 8008,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.ilb",
            "azurerm_resource_group.resrcGrp",
            "azurerm_subnet.subnetFgtPort2",
            "azurerm_virtual_network.vnetNgfw",
            "data.azurerm_virtual_network.vnetNgfw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "elbRuleVpnIke",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ELB/backendAddressPools/FGT-HA-Cluster"
            ],
            "backend_port": 500,
            "disable_outbound_snat": true,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ELB/frontendIPConfigurations/eip-elb",
            "frontend_ip_configuration_name": "eip-elb",
            "frontend_port": 500,
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ELB/loadBalancingRules/LBRule-VPN-IKE",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ELB",
            "name": "LBRule-VPN-IKE",
            "probe_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ELB/probes/elbprobe",
            "protocol": "Udp"
          },
          "dependencies": [
            "azurerm_lb.elb",
            "azurerm_lb_backend_address_pool.elbBackendAddrPool",
            "azurerm_lb_probe.elbprobe",
            "azurerm_public_ip.eipElb",
            "azurerm_resource_group.resrcGrp",
            "data.azurerm_virtual_network.vnetNgfw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "elbRuleVpnNatt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ELB/backendAddressPools/FGT-HA-Cluster"
            ],
            "backend_port": 4500,
            "disable_outbound_snat": true,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ELB/frontendIPConfigurations/eip-elb",
            "frontend_ip_configuration_name": "eip-elb",
            "frontend_port": 4500,
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ELB/loadBalancingRules/LBRule-VPN-NATT",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ELB",
            "name": "LBRule-VPN-NATT",
            "probe_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ELB/probes/elbprobe",
            "protocol": "Udp"
          },
          "dependencies": [
            "azurerm_lb.elb",
            "azurerm_lb_backend_address_pool.elbBackendAddrPool",
            "azurerm_lb_probe.elbprobe",
            "azurerm_public_ip.eipElb",
            "azurerm_resource_group.resrcGrp",
            "data.azurerm_virtual_network.vnetNgfw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "ilbRulePassthrough",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ILB/backendAddressPools/FGT-HA-Cluster"
            ],
            "backend_port": 0,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ILB/frontendIPConfigurations/ip-ilb",
            "frontend_ip_configuration_name": "ip-ilb",
            "frontend_port": 0,
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ILB/loadBalancingRules/LBRule-passthrough",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ILB",
            "name": "LBRule-passthrough",
            "probe_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ILB/probes/ilbprobe",
            "protocol": "All"
          },
          "dependencies": [
            "azurerm_lb.ilb",
            "azurerm_lb_backend_address_pool.ilbBackendAddrPool",
            "azurerm_lb_probe.ilbprobe",
            "azurerm_resource_group.resrcGrp",
            "azurerm_subnet.subnetFgtPort2",
            "azurerm_virtual_network.vnetNgfw",
            "data.azurerm_virtual_network.vnetNgfw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "eniFgtPort1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/networkInterfaces/eni-port1-fgt1",
            "internal_domain_name_suffix": "y3ylevtff3tuxjrr4i30rt2k1c.cx.internal.chinacloudapp.cn",
            "ip_configuration": [
              {
                "name": "ip-port1-fgt1",
                "primary": true,
                "private_ip_address": "192.168.11.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/virtualNetworks/VNET-NGFW/subnets/subnet-fgt-port1"
              }
            ],
            "location": "chinanorth2",
            "name": "eni-port1-fgt1",
            "private_ip_address": "192.168.11.5",
            "private_ip_addresses": [
              "192.168.11.5"
            ],
            "resource_group_name": "lg-test",
            "tags": {
              "Project": "fgtvm-ha",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resrcGrp",
            "azurerm_subnet.subnetFgtPort1",
            "azurerm_virtual_network.vnetNgfw",
            "data.azurerm_virtual_network.vnetNgfw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/networkInterfaces/eni-port1-fgt2",
            "internal_domain_name_suffix": "y3ylevtff3tuxjrr4i30rt2k1c.cx.internal.chinacloudapp.cn",
            "ip_configuration": [
              {
                "name": "ip-port1-fgt2",
                "primary": true,
                "private_ip_address": "192.168.11.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/virtualNetworks/VNET-NGFW/subnets/subnet-fgt-port1"
              }
            ],
            "location": "chinanorth2",
            "name": "eni-port1-fgt2",
            "private_ip_address": "192.168.11.4",
            "private_ip_addresses": [
              "192.168.11.4"
            ],
            "resource_group_name": "lg-test",
            "tags": {
              "Project": "fgtvm-ha",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resrcGrp",
            "azurerm_subnet.subnetFgtPort1",
            "azurerm_virtual_network.vnetNgfw",
            "data.azurerm_virtual_network.vnetNgfw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "eniFgtPort2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/networkInterfaces/eni-port2-fgt1",
            "internal_domain_name_suffix": "y3ylevtff3tuxjrr4i30rt2k1c.cx.internal.chinacloudapp.cn",
            "ip_configuration": [
              {
                "name": "ip-port2-fgt1",
                "primary": true,
                "private_ip_address": "192.168.12.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/virtualNetworks/VNET-NGFW/subnets/subnet-fgt-port2"
              }
            ],
            "location": "chinanorth2",
            "name": "eni-port2-fgt1",
            "private_ip_address": "192.168.12.6",
            "private_ip_addresses": [
              "192.168.12.6"
            ],
            "resource_group_name": "lg-test",
            "tags": {
              "Project": "fgtvm-ha",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resrcGrp",
            "azurerm_subnet.subnetFgtPort2",
            "azurerm_virtual_network.vnetNgfw",
            "data.azurerm_virtual_network.vnetNgfw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/networkInterfaces/eni-port2-fgt2",
            "internal_domain_name_suffix": "y3ylevtff3tuxjrr4i30rt2k1c.cx.internal.chinacloudapp.cn",
            "ip_configuration": [
              {
                "name": "ip-port2-fgt2",
                "primary": true,
                "private_ip_address": "192.168.12.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/virtualNetworks/VNET-NGFW/subnets/subnet-fgt-port2"
              }
            ],
            "location": "chinanorth2",
            "name": "eni-port2-fgt2",
            "private_ip_address": "192.168.12.5",
            "private_ip_addresses": [
              "192.168.12.5"
            ],
            "resource_group_name": "lg-test",
            "tags": {
              "Project": "fgtvm-ha",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resrcGrp",
            "azurerm_subnet.subnetFgtPort2",
            "azurerm_virtual_network.vnetNgfw",
            "data.azurerm_virtual_network.vnetNgfw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "eniFgtPort3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/networkInterfaces/eni-port3-fgt1",
            "internal_domain_name_suffix": "y3ylevtff3tuxjrr4i30rt2k1c.cx.internal.chinacloudapp.cn",
            "ip_configuration": [
              {
                "name": "ip-port3-fgt1",
                "primary": true,
                "private_ip_address": "192.168.13.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/virtualNetworks/VNET-NGFW/subnets/subnet-fgt-port3"
              }
            ],
            "location": "chinanorth2",
            "name": "eni-port3-fgt1",
            "private_ip_address": "192.168.13.4",
            "private_ip_addresses": [
              "192.168.13.4"
            ],
            "resource_group_name": "lg-test",
            "tags": {
              "Project": "fgtvm-ha",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "azurerm_public_ip.eipFgtMgmt",
            "azurerm_resource_group.resrcGrp",
            "azurerm_subnet.subnetFgtPort3",
            "azurerm_virtual_network.vnetNgfw",
            "data.azurerm_virtual_network.vnetNgfw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/networkInterfaces/eni-port3-fgt2",
            "internal_domain_name_suffix": "y3ylevtff3tuxjrr4i30rt2k1c.cx.internal.chinacloudapp.cn",
            "ip_configuration": [
              {
                "name": "ip-port3-fgt2",
                "primary": true,
                "private_ip_address": "192.168.13.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/virtualNetworks/VNET-NGFW/subnets/subnet-fgt-port3"
              }
            ],
            "location": "chinanorth2",
            "name": "eni-port3-fgt2",
            "private_ip_address": "192.168.13.5",
            "private_ip_addresses": [
              "192.168.13.5"
            ],
            "resource_group_name": "lg-test",
            "tags": {
              "Project": "fgtvm-ha",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "azurerm_public_ip.eipFgtMgmt",
            "azurerm_resource_group.resrcGrp",
            "azurerm_subnet.subnetFgtPort3",
            "azurerm_virtual_network.vnetNgfw",
            "data.azurerm_virtual_network.vnetNgfw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "eniFgtPort4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/networkInterfaces/eni-port4-fgt1",
            "internal_domain_name_suffix": "y3ylevtff3tuxjrr4i30rt2k1c.cx.internal.chinacloudapp.cn",
            "ip_configuration": [
              {
                "name": "ip-port4-fgt1",
                "primary": true,
                "private_ip_address": "192.168.14.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/publicIPAddresses/eip-mgmt-fgt1",
                "subnet_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/virtualNetworks/VNET-NGFW/subnets/subnet-fgt-port4"
              }
            ],
            "location": "chinanorth2",
            "name": "eni-port4-fgt1",
            "private_ip_address": "192.168.14.5",
            "private_ip_addresses": [
              "192.168.14.5"
            ],
            "resource_group_name": "lg-test",
            "tags": {
              "Project": "fgtvm-ha",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "azurerm_public_ip.eipFgtMgmt",
            "azurerm_resource_group.resrcGrp",
            "azurerm_subnet.subnetFgtPort4",
            "azurerm_virtual_network.vnetNgfw",
            "data.azurerm_virtual_network.vnetNgfw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/networkInterfaces/eni-port4-fgt2",
            "internal_domain_name_suffix": "y3ylevtff3tuxjrr4i30rt2k1c.cx.internal.chinacloudapp.cn",
            "ip_configuration": [
              {
                "name": "ip-port4-fgt2",
                "primary": true,
                "private_ip_address": "192.168.14.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/publicIPAddresses/eip-mgmt-fgt2",
                "subnet_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/virtualNetworks/VNET-NGFW/subnets/subnet-fgt-port4"
              }
            ],
            "location": "chinanorth2",
            "name": "eni-port4-fgt2",
            "private_ip_address": "192.168.14.4",
            "private_ip_addresses": [
              "192.168.14.4"
            ],
            "resource_group_name": "lg-test",
            "tags": {
              "Project": "fgtvm-ha",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "azurerm_public_ip.eipFgtMgmt",
            "azurerm_resource_group.resrcGrp",
            "azurerm_subnet.subnetFgtPort4",
            "azurerm_virtual_network.vnetNgfw",
            "data.azurerm_virtual_network.vnetNgfw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "associateElbWithFgtPort1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ELB/backendAddressPools/FGT-HA-Cluster",
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/networkInterfaces/eni-port1-fgt1/ipConfigurations/ip-port1-fgt1|/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ELB/backendAddressPools/FGT-HA-Cluster",
            "ip_configuration_name": "ip-port1-fgt1",
            "network_interface_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/networkInterfaces/eni-port1-fgt1"
          },
          "dependencies": [
            "azurerm_lb.elb",
            "azurerm_lb_backend_address_pool.elbBackendAddrPool",
            "azurerm_network_interface.eniFgtPort1",
            "azurerm_public_ip.eipElb",
            "azurerm_resource_group.resrcGrp",
            "azurerm_subnet.subnetFgtPort1",
            "azurerm_virtual_network.vnetNgfw",
            "data.azurerm_virtual_network.vnetNgfw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ELB/backendAddressPools/FGT-HA-Cluster",
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/networkInterfaces/eni-port1-fgt2/ipConfigurations/ip-port1-fgt2|/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ELB/backendAddressPools/FGT-HA-Cluster",
            "ip_configuration_name": "ip-port1-fgt2",
            "network_interface_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/networkInterfaces/eni-port1-fgt2"
          },
          "dependencies": [
            "azurerm_lb.elb",
            "azurerm_lb_backend_address_pool.elbBackendAddrPool",
            "azurerm_network_interface.eniFgtPort1",
            "azurerm_public_ip.eipElb",
            "azurerm_resource_group.resrcGrp",
            "azurerm_subnet.subnetFgtPort1",
            "azurerm_virtual_network.vnetNgfw",
            "data.azurerm_virtual_network.vnetNgfw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "associateIlbWithFgtPort2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ILB/backendAddressPools/FGT-HA-Cluster",
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/networkInterfaces/eni-port2-fgt1/ipConfigurations/ip-port2-fgt1|/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ILB/backendAddressPools/FGT-HA-Cluster",
            "ip_configuration_name": "ip-port2-fgt1",
            "network_interface_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/networkInterfaces/eni-port2-fgt1"
          },
          "dependencies": [
            "azurerm_lb.ilb",
            "azurerm_lb_backend_address_pool.ilbBackendAddrPool",
            "azurerm_network_interface.eniFgtPort2",
            "azurerm_resource_group.resrcGrp",
            "azurerm_subnet.subnetFgtPort2",
            "azurerm_virtual_network.vnetNgfw",
            "data.azurerm_virtual_network.vnetNgfw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ILB/backendAddressPools/FGT-HA-Cluster",
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/networkInterfaces/eni-port2-fgt2/ipConfigurations/ip-port2-fgt2|/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/loadBalancers/ILB/backendAddressPools/FGT-HA-Cluster",
            "ip_configuration_name": "ip-port2-fgt2",
            "network_interface_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/networkInterfaces/eni-port2-fgt2"
          },
          "dependencies": [
            "azurerm_lb.ilb",
            "azurerm_lb_backend_address_pool.ilbBackendAddrPool",
            "azurerm_network_interface.eniFgtPort2",
            "azurerm_resource_group.resrcGrp",
            "azurerm_subnet.subnetFgtPort2",
            "azurerm_virtual_network.vnetNgfw",
            "data.azurerm_virtual_network.vnetNgfw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "associateFgtWithNsgMgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/networkInterfaces/eni-port4-fgt1|/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/networkSecurityGroups/nsg-fgt-mgmt",
            "network_interface_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/networkInterfaces/eni-port4-fgt1",
            "network_security_group_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/networkSecurityGroups/nsg-fgt-mgmt"
          },
          "dependencies": [
            "azurerm_network_interface.eniFgtPort3",
            "azurerm_network_interface.eniFgtPort4",
            "azurerm_network_security_group.nsgFgtMgmt",
            "azurerm_public_ip.eipFgtMgmt",
            "azurerm_resource_group.resrcGrp",
            "azurerm_subnet.subnetFgtPort3",
            "azurerm_subnet.subnetFgtPort4",
            "azurerm_virtual_network.vnetNgfw",
            "data.azurerm_virtual_network.vnetNgfw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/networkInterfaces/eni-port4-fgt2|/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/networkSecurityGroups/nsg-fgt-mgmt",
            "network_interface_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/networkInterfaces/eni-port4-fgt2",
            "network_security_group_id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/networkSecurityGroups/nsg-fgt-mgmt"
          },
          "dependencies": [
            "azurerm_network_interface.eniFgtPort3",
            "azurerm_network_interface.eniFgtPort4",
            "azurerm_network_security_group.nsgFgtMgmt",
            "azurerm_public_ip.eipFgtMgmt",
            "azurerm_resource_group.resrcGrp",
            "azurerm_subnet.subnetFgtPort3",
            "azurerm_subnet.subnetFgtPort4",
            "azurerm_virtual_network.vnetNgfw",
            "data.azurerm_virtual_network.vnetNgfw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsgFgtMgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/networkSecurityGroups/nsg-fgt-mgmt",
            "location": "chinanorth2",
            "name": "nsg-fgt-mgmt",
            "resource_group_name": "lg-test",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ICMP",
                "priority": 100,
                "protocol": "Icmp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "FGTHTTPS",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Project": "fgtvm-ha",
              "Terraform": "true"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.resrcGrp",
            "data.azurerm_virtual_network.vnetNgfw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "eipElb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/publicIPAddresses/eip-elb",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.131.73.237",
            "ip_version": "IPv4",
            "location": "chinanorth2",
            "name": "eip-elb",
            "resource_group_name": "lg-test",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.resrcGrp",
            "data.azurerm_virtual_network.vnetNgfw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "eipFgtMgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/publicIPAddresses/eip-mgmt-fgt1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.131.73.142",
            "ip_version": "IPv4",
            "location": "chinanorth2",
            "name": "eip-mgmt-fgt1",
            "resource_group_name": "lg-test",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.resrcGrp",
            "data.azurerm_virtual_network.vnetNgfw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/publicIPAddresses/eip-mgmt-fgt2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.130.144.112",
            "ip_version": "IPv4",
            "location": "chinanorth2",
            "name": "eip-mgmt-fgt2",
            "resource_group_name": "lg-test",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.resrcGrp",
            "data.azurerm_virtual_network.vnetNgfw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "internalRoute",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/routeTables/rtb-inspection/routes/default",
            "name": "default",
            "next_hop_in_ip_address": "192.168.12.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "lg-test",
            "route_table_name": "rtb-inspection",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_lb.ilb",
            "azurerm_resource_group.resrcGrp",
            "azurerm_route_table.rtbFgtInspection",
            "azurerm_subnet.subnetFgtPort2",
            "azurerm_virtual_network.vnetNgfw",
            "data.azurerm_virtual_network.vnetNgfw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "rtbFgtInspection",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/routeTables/rtb-inspection",
            "location": "chinanorth2",
            "name": "rtb-inspection",
            "resource_group_name": "lg-test",
            "route": [],
            "subnets": [],
            "tags": {
              "Project": "fgtvm-ha",
              "Terraform": "true"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_lb.ilb",
            "azurerm_resource_group.resrcGrp",
            "azurerm_subnet.subnetFgtPort2",
            "azurerm_virtual_network.vnetNgfw",
            "data.azurerm_virtual_network.vnetNgfw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnetFgtPort1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.11.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/virtualNetworks/VNET-NGFW/subnets/subnet-fgt-port1",
            "name": "subnet-fgt-port1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "lg-test",
            "virtual_network_name": "VNET-NGFW"
          },
          "dependencies": [
            "azurerm_resource_group.resrcGrp",
            "azurerm_virtual_network.vnetNgfw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnetFgtPort2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.12.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/virtualNetworks/VNET-NGFW/subnets/subnet-fgt-port2",
            "name": "subnet-fgt-port2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "lg-test",
            "virtual_network_name": "VNET-NGFW"
          },
          "dependencies": [
            "azurerm_resource_group.resrcGrp",
            "azurerm_virtual_network.vnetNgfw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnetFgtPort3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.13.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/virtualNetworks/VNET-NGFW/subnets/subnet-fgt-port3",
            "name": "subnet-fgt-port3",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "lg-test",
            "virtual_network_name": "VNET-NGFW"
          },
          "dependencies": [
            "azurerm_resource_group.resrcGrp",
            "azurerm_virtual_network.vnetNgfw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnetFgtPort4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.14.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/virtualNetworks/VNET-NGFW/subnets/subnet-fgt-port4",
            "name": "subnet-fgt-port4",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "lg-test",
            "virtual_network_name": "VNET-NGFW"
          },
          "dependencies": [
            "azurerm_resource_group.resrcGrp",
            "azurerm_virtual_network.vnetNgfw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnetNgfw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "56b270c7-2f65-4b67-a631-f23ba8cf8ada",
            "id": "/subscriptions/81c335b8-c6ce-4e45-93e4-3269de5a8164/resourceGroups/lg-test/providers/Microsoft.Network/virtualNetworks/VNET-NGFW",
            "location": "chinanorth2",
            "name": "VNET-NGFW",
            "resource_group_name": "lg-test",
            "tags": {
              "Project": "fgtvm-ha",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resrcGrp"
          ]
        }
      ]
    }
  ]
}